--- a/README.Rmd
+++ b/README.Rmd
@@ -20,9 +20,10 @@ knitr::opts_chunk$set(
 
 The **didhetero** package provides tools to construct doubly robust 
 uniform confidence bands (UCB) for the group-time conditional average treatment 
-effect (CATT) function given a pre-treatment covariate of interest 
-in the staggered difference-in-differences setup of Callaway and Sant'Anna (2021).
-The uniform inference procedures are developed by [Imai, Qin, and Yanagi (2023) "Doubly Robust Uniform Confidence Bands for Group-Time Conditional Average Treatment Effects in Difference-in-Differences"](https://doi.org/10.48550/arXiv.2305.02185).
+effect (CATT) function given a pre-treatment covariate of interest and 
+a variety of useful summary parameters in the staggered 
+difference-in-differences setup of Callaway and Sant'Anna (2021).
+The uniform inference procedures are developed by [Imai, Qin, and Yanagi (2025) "Doubly Robust Uniform Confidence Bands for Group-Time Conditional Average Treatment Effects in Difference-in-Differences"](https://doi.org/10.48550/arXiv.2305.02185).
 
 ## Installation
 
@@ -49,7 +50,7 @@ Difference-in-differences with multiple time periods.
 Journal of Econometrics, 225(2), 200-230.
 [Link](https://doi.org/10.1016/j.jeconom.2020.12.001)
 
-- Imai, S., Qin, L., & Yanagi, T. (2023). 
+- Imai, S., Qin, L., & Yanagi, T. (2025). 
 Doubly Robust Uniform Confidence Bands for Group-Time Conditional Average Treatment Effects in Difference-in-Differences.
 arXiv preprint arXiv:2305.02185.
 [Link](https://doi.org/10.48550/arXiv.2305.02185)
