--- a/vignettes/didhetero.Rmd
+++ b/vignettes/didhetero.Rmd
@@ -12,13 +12,13 @@ vignette: >
 
 ## Introduction
 
-The **didhetero** package provides tools to construct doubly robust 
-uniform confidence bands for the group-time conditional average treatment 
-effect (CATT) function given a pre-treatment continuous covariate of interest 
-and a variety of useful summary parameters in the staggered 
+The **didhetero** package provides tools to construct doubly robust
+uniform confidence bands for the group-time conditional average treatment
+effect (CATT) function given a pre-treatment continuous covariate of interest
+and a variety of useful summary parameters in the staggered
 difference-in-differences (DiD) setup of Callaway and Sant'Anna (2021).
 
-This package is useful for understanding the heterogeneity in treatment effects 
+This package is useful for understanding the heterogeneity in treatment effects
 with respect to groups, periods, and covariate values in the staggered DiD setting.
 
 The uniform inference methods are developed by [Imai, Qin, and Yanagi (2025) "Doubly Robust Uniform Confidence Bands for Group-Time Conditional Average Treatment Effects in Difference-in-Differences"](https://doi.org/10.48550/arXiv.2305.02185).
@@ -43,7 +43,7 @@ The **didhetero** package provides the following functions.
 
 ## The `catt_gt_continuous()` Function
 
-#### Arguments 
+#### Arguments
 
 The `catt_gt_continuous()` function has the following arguments.
 
@@ -63,7 +63,7 @@ The `catt_gt_continuous()` function has the following arguments.
    If it is a vector, the first and second elements indicate g and t, respectively.
    If it is a matrix, the first and second columns indicate g's and t's, respectively.
    Default is `NULL` and gteval is constructed automatically.
-- `pretrend`: Boolean for whether or not to perform the uniform inference 
+- `pretrend`: Boolean for whether or not to perform the uniform inference
    for CATT in the pre-treatment periods (i.e., pre-trends in our framework).
    This parameter is only applicable if gteval is `NULL`.
    Default is `FALSE`.
@@ -80,7 +80,7 @@ The `catt_gt_continuous()` function has the following arguments.
    If bstrap is `FALSE`, only the analytical critical value is used.
 - `biters`: The number of bootstrap iterations.
    This parameter is only applicable if `bstrap = TRUE`.
-   Default is 1000. 
+   Default is 1000.
 - `porder`: The polynomial order used for the second- and third-stage estimation.
    Options are 1 and 2,
    which correspond to the local linear and quadratic regressions, respectively.
@@ -97,7 +97,7 @@ The `catt_gt_continuous()` function has the following arguments.
    Default is "IMSE1", which is recommended for use with `porder = 2`.
 - `bw`: The bandwidth used for the second- and third-stage estimation.
    Default is `NULL` and the bandwidth is chosen automatically.
-   This parameter is only applicable if bwselect is "manual", and 
+   This parameter is only applicable if bwselect is "manual", and
    should be a scalar or a vector whose length equals to the number of rows of gteval.
 - `uniformall`: Boolean for whether or not to perform the uniform inference over (g, t, z).
    Default is `TRUE`, and the uniform inference over (g, t, z) is performed.
@@ -127,10 +127,10 @@ The `catt_gt_continuous()` function returns a list that contains the following e
 
 The `aggte_continuous()` function has the following arguments.
 
-- `output`: The output of the `catt_gt_continuous` function. 
-   In doing so, several arguments and the uniform inference results for CATT from 
+- `output`: The output of the `catt_gt_continuous` function.
+   In doing so, several arguments and the uniform inference results for CATT from
    the `catt_gt_continuous` function can be used in this function.
-   In particular, the following are passed down from output: 
+   In particular, the following are passed down from output:
    `xformla`, `zeval`, `pretrend`, `control_group`, `anticipation`, `alp`, and `kernel`.
 - `type` Which type of the summary parameter is of interest.
    Options are "simple", "dynamic", "group", and "calendar".
@@ -160,7 +160,7 @@ The `aggte_continuous()` function has the following arguments.
 - `bw`:
    The bandwidth used for the aggregation.
    Default is `NULL` and the bandwidth is chosen automatically.
-   This parameter is only applicable if bwselect is "manual", and 
+   This parameter is only applicable if bwselect is "manual", and
    should be a scalar or a vector whose length equals to the number of rows of eval.
 - `uniformall`: Boolean for whether or not to perform the uniform inference over both eval and z.
    Default is `TRUE` and the uniform inference over eval and z is performed.
@@ -258,7 +258,7 @@ The figure of the analytical uniform confidence band for $g = 2$ and $t = 2$ is:
 output1$Figure1$g2_t2
 ```
 
-![](unnamed-chunk-7-1.png)
+![plot of chunk unnamed-chunk-7](unnamed-chunk-7.png)
 
 The figure of the bootstrap uniform confidence band for $g = 2$ and $t = 2$ is:
 
@@ -266,7 +266,7 @@ The figure of the bootstrap uniform confidence band for $g = 2$ and $t = 2$ is:
 output1$Figure2$g2_t2
 ```
 
-![](unnamed-chunk-8-1.png)
+![plot of chunk unnamed-chunk-8](unnamed-chunk-8.png)
 
 We can run the `aggte_continuous()` function to compute the doubly robust estimates and uniform confidence bands for the event-study-type parameter given the continuous covariate $Z$:
 
@@ -304,7 +304,7 @@ The figure of the analytical uniform confidence band for $e = 0$ is:
 output2$Figure1$eval0
 ```
 
-![](unnamed-chunk-11-1.png)
+![plot of chunk unnamed-chunk-11](unnamed-chunk-11.png)
 
 The figure of the bootstrap Uuniform confidence band for $e = 0$ is:
 
@@ -312,16 +312,16 @@ The figure of the bootstrap Uuniform confidence band for $e = 0$ is:
 output2$Figure2$eval0
 ```
 
-![](unnamed-chunk-12-1.png)
+![plot of chunk unnamed-chunk-12](unnamed-chunk-12.png)
 
 ## References
 
-- Callaway, B., & Sant’Anna, P. H. (2021). 
-Difference-in-differences with multiple time periods. 
+- Callaway, B., & Sant’Anna, P. H. (2021).
+Difference-in-differences with multiple time periods.
 Journal of Econometrics, 225(2), 200-230.
 [Link](https://doi.org/10.1016/j.jeconom.2020.12.001)
 
-- Imai, S., Qin, L., & Yanagi, T. (2025). 
+- Imai, S., Qin, L., & Yanagi, T. (2025).
 Doubly Robust Uniform Confidence Bands for Group-Time Conditional Average Treatment Effects in Difference-in-Differences.
 arXiv preprint arXiv:2305.02185.
 [Link](https://doi.org/10.48550/arXiv.2305.02185)
